<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"

        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tweet"
        android:icon="@android:drawable/ic_menu_edit"

        android:title="@string/tweet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_purge"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/purge" />
    <item
        android:id="@+id/itemServiceStart"
        android:title="@string/titleServiceStart"
        android:icon="@android:drawable/ic_media_play" />
    <item
        android:id="@+id/itemServiceStop"
        android:title="@string/titleServiceStop"
        android:icon="@android:drawable/ic_media_pause" />

</menu>