<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cookie"
    android:orientation="vertical"
    tools:context=".StatusActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center"
        android:text="@string/title_status"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#cfff"
        android:gravity="top|center_horizontal"
        android:hint="@string/hint_status"
        android:textColor="@android:color/black"
        android:textColorHint="#9e9e9e" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="180dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/button_tweet"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <!-- <Button
         android:id="@+id/buttonTweet"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="@string/button_tweet"
         android:textSize="20sp" />
         -->
    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:text="" />


</LinearLayout>